Updated project with latest downloaded version